aws/projects/Project-001-Roman-Numerals-Converter/template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: | 
This Cloudformation Template was written for Converting Latin Numbers to Roman Numbers Static 
Website on EC2. This website will be deployed on Linux 2 (ami-0742b4e673072066f) 
EC2 instance with custom security group which allows http connections on port 80 and ssh port 22 from anywhere.
 this Static website is dowloaded from Public Github repository, then deployed on Apache Web Server.. 
  
Parameters:
  Emrkeypair:
    Description: Select a keypair 
    Type: AWS::EC2::KeyPair::KeyName
  
  EmrVPC:
    Description: This is default VPC 
    Type: AWS::EC2::VPC::Id

  Emrsubnets:
    Description: 
    Type: List<AWS::EC2::Subnet::Id>
    Default: 


    
Metadata:
  
Mappings:
  RegionImageMap:
    us-east-1:
      AMI: ami-0742b4e673072066f
    us-east-2:
      AMI: ami-05d72852800cbf29e
    us-west-1:
      AMI: ami-0577b787189839998
    us-west-2:
      AMI: ami-0518bb0e75d3619ca
    eu-west-1:
      AMI: ami-0ffea00000f287d30
  
Conditions:
  
Resources:
  EmrahsSecgroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSH and HTTP ports #required
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      VpcId: !Ref EmrVPC

  EmrahsTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        KeyName: !Ref Emrkeypair
        ImageId: !FindInMap 
          - RegionImageMap
          - !Ref AWS::Region
          - AMI
        UserData: !Base64 |
            #!/bin/bash
            yum update -y
            yum install -y httpd
            TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
            && PRIVATE_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4`
            TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
            && PUBLIC_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/public-ipv4` 
            DATE_TIME=`date`
            chmod -R 777 /var/www/html
            echo "<html>
            <head>
                <title> Congratulations! You have created an instance from Launch Template</title>
            </head>
            <body>
                <h1>This web server is launched from launch template by YOUR_NAME</h1>
                <p>This instance is created at <b>$DATE_TIME</b></p>
                <p>Private IP address of this instance is <b>$PRIVATE_IP</b></p>
                <p>Public IP address of this instance is <b>$PUBLIC_IP</b></p>
            </body>
            </html>" > /var/www/html/index.html
            systemctl start httpd
            systemctl enable httpd
        SecurityGroupIds:
          - !Ref EmrahsSecgroup
        InstanceType: t2.micro
        TagSpecifications:
          - ResourceType: instance
            Tags:
              - Key: Name
                 Value: !Join 
                 - ''
                 - - 'Web Server of '
                   - !Ref AWS::StackName




  
Transform:
  
Outputs:
